--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-12 botoes">
+    <div class="col-6 botoes">
       <button (click)="incremetar()" class="btn btn-primary">
         Incrementar
       </button>
@@ -9,11 +9,9 @@
         Decrementar
       </button>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
+    <div class="col-6 tabela">
       <table class="table table-bordered">
-        <thead class="table-dark">
+        <thead>
           <tr>
             <th scope="col">Ação</th>
           </tr>
