--- a/src/app/contador/contador.component.html
+++ b/src/app/contador/contador.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-6 botoes">
+    <div class="col-lg-4 botoes">
       <button (click)="incremetar()" class="btn btn-primary">
         Incrementar
       </button>
@@ -9,7 +9,7 @@
         Decrementar
       </button>
     </div>
-    <div class="col-6 tabela">
+    <div class="col-lg-8 tabela">
       <table class="table table-bordered">
         <thead>
           <tr>
